@@ -1,3 +1,8 @@
+2006-03-22  Roland Dreier  <rdreier@cisco.com>
+
+	* include/infiniband/verbs.h (ibv_req_notify_cq): Document
+	parameters better.
+
 2006-03-16  Roland Dreier  <rdreier@cisco.com>
 
 	* src/cmd.c, src/device.c, src/memory.c, src/verbs.c: Add include
